<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/menu_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_start" />

    <Button
        android:id="@+id/menu_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_scores" />

    <Button
        android:id="@+id/menu_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_invite" />

    <Button
        android:id="@+id/menu_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_login"/>

    <Button
        android:id="@+id/menu_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_logout"/>

</LinearLayout>
