<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:text="@string/scores_header"/>

        <RadioGroup
            android:id="@+id/radio_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radio_scores_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_radio_all"
                android:checked="true"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/radio_scores_personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_radio_personal"
                android:checked="false"
                android:layout_weight="1"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scores_name_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/scores_header_color"
                android:text="@string/scores_name_header"/>

            <TextView
                android:id="@+id/scores_city_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/scores_header_color"
                android:text="@string/scores_city_header"/>

            <TextView
                android:id="@+id/scores_state_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/scores_header_color"
                android:text="@string/scores_state_header"/>

            <TextView
                android:id="@+id/scores_score_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/scores_header_color"
                android:text="@string/scores_score_header"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/scores_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="TEST"/>

            <TextView
                android:id="@+id/scores_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="TEST"/>

            <TextView
                android:id="@+id/scores_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="TEST"/>

            <TextView
                android:id="@+id/scores_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="TEST"/>
        </LinearLayout>

        <Button
            android:id="@+id/scores_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/scores_map"
            />
    </LinearLayout>
</ScrollView>
